--- a/GraphQL/appsettings.json
+++ b/GraphQL/appsettings.json
@@ -8,7 +8,7 @@
   },
   "GraphQLURI": "https://api.github.com/graphql",
   "GithubAccount": "masterysystems",
-  "PersonalToken": "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",
+  "PersonalToken": "",
   "AllowedHosts": "*"
 
 }
